--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -16,7 +16,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () start threejs-examples-weird-face-two r140 prototype
 
 ## EDIT
-* () threejs-export-webm-whammy: for post folder
+* () threejs-webgl: proof read, for post folder of current state, anything else from there
 * () threejs-examples-dae-tools: r4 of dae-tools and edit post
 * () threejs-examples-object-grid-wrap-land : r4 of example
 
@@ -27,7 +27,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () r6 of videoground - use user data folder to get start video URI and start folder for opening files
 
 ## VIDEOGROUND BLOG POSTS
-* () threejs-math-utils
+
 
 ## BLOG POST SCRIPTS
 * () start a pdbf ( post database file ) cli tool for createing one large file from a posts folder, and inverse of such.
@@ -46,8 +46,15 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - THU 09/11/2022
 
 ### () - WED 09/11/2022
+* () threejs-export-webm-whammy: for post folder
 
 ### () - TUE 09/11/2022
+* () edit: threejs-object3d-rotation
+* () videoground-blog-posts: threejs-object3d-rotation video1
+
+* () test-threejs: demo for threejs dae exporter
+* () test-threejs: post folder for threejs-svg-loader
+
 
 ### () - MON 09/11/2022
 * (done) threejs-math-utils: smooth step example.
