--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -10,6 +10,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () work on new DAE folder shelter-one
 
 ## PROTOTYPES
+* () start a threejs-animation-loop proto folder with loop example in threejs-object3d-rotation s5-apply-euler example
 * () start a threejs-geometry-utils proto folder
 * () start a threejs-export-frames proto folder
 * () start threejs-examples-weird-blob-guy-one r140 prototype
