--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -50,7 +50,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () threejs-export-webm-whammy: for post folder
 
 ### () - TUE 09/11/2022
-* () edit: threejs-object3d-rotation
+* (done) edit: threejs-object3d-rotation
 * () videoground-blog-posts: threejs-object3d-rotation video1
 
 * () test-threejs: demo for threejs dae exporter
