--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -51,7 +51,7 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - TUE 09/11/2022
 * (done) edit: threejs-object3d-rotation
-* () videoground-blog-posts: threejs-object3d-rotation video1
+* (done) videoground-blog-posts: threejs-object3d-rotation video1
 
 * () test-threejs: demo for threejs dae exporter
 * () test-threejs: post folder for threejs-svg-loader
