--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -17,9 +17,24 @@ I can only do so much per day, when I find something that needs doing I can park
 * () start threejs-examples-weird-face-two r140 prototype
 
 ## EDIT
-* () threejs-export-webm-whammy: for post folder
+* () threejs-normal-map
+* () threejs-object3d-get-world-position
+* () threejs-normal-material
+* () threejs-vector3-apply-axis-angle
+* () threejs-vector3-apply-euler
+* () threejs-orbit-controls
+* () threejs-line-fat-width
+* () threejs-shape
+* () threejs-edges-geometry
+* () threejs-torus
+* () threejs-mesh-material-index
+* () threejs-object3d-visible
+* () threejs-raycaster
+* () threejs-points-material
 * () threejs-webgl: proof read, for post folder of current state, anything else from there
 * () threejs-examples-dae-tools: r4 of dae-tools and edit post
+
+* () threejs-export-webm-whammy: for post folder
 * () threejs-examples-object-grid-wrap-land : r4 of example
 
 ## YOUTUBE
@@ -27,8 +42,6 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ## VIDEOGROUND
 * () r6 of videoground - use user data folder to get start video URI and start folder for opening files
-
-## VIDEOGROUND BLOG POSTS
 
 
 ## BLOG POST SCRIPTS
