--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -27,7 +27,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () threejs-shape
 * () threejs-edges-geometry
 * () threejs-torus
-* () threejs-mesh-material-index
+
 * () threejs-object3d-visible
 * () threejs-raycaster
 * () threejs-points-material
@@ -61,6 +61,9 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - THU 09/11/2022
 
 ### () - WED 09/11/2022
+* () threejs-mesh-material-index
+* () videoground-blog-posts: threejs-mesh-material-index
+
 * () test-threejs: demo for threejs dae exporter
 * () test-threejs: post folder for threejs-svg-loader
 
