--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -61,8 +61,8 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - THU 09/11/2022
 
 ### () - WED 09/11/2022
-* () threejs-mesh-material-index
-* () videoground-blog-posts: threejs-mesh-material-index
+* (done) threejs-mesh-material-index
+* (done) videoground-blog-posts: threejs-mesh-material-index
 
 * () test-threejs: demo for threejs dae exporter
 * () test-threejs: post folder for threejs-svg-loader
