--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -19,7 +19,6 @@ I can only do so much per day, when I find something that needs doing I can park
 ## EDIT
 * () threejs-normal-map
 * () threejs-object3d-get-world-position
-* () threejs-normal-material
 * () threejs-vector3-apply-axis-angle
 * () threejs-vector3-apply-euler
 * () threejs-orbit-controls
@@ -59,13 +58,16 @@ I can only do so much per day, when I find something that needs doing I can park
 * () start post #1005 on threejs-svg-loader
 
 ### () - THU 09/11/2022
+* () edit: threejs-normal-material
+* () videoground-blog-posts: threejs-normal-material
+
+* () test-threejs: post folder for threejs-svg-loader
+* () test-threejs: demo for threejs dae exporter
 
 ### () - WED 09/11/2022
 * (done) threejs-mesh-material-index
 * (done) videoground-blog-posts: threejs-mesh-material-index
-
-* () test-threejs: demo for threejs dae exporter
-* () test-threejs: post folder for threejs-svg-loader
+* (done) test-threejs: post folder for threejs-svg-loader
 
 ### () - TUE 09/11/2022
 * (done) edit: threejs-object3d-rotation
