--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -58,7 +58,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () start post #1005 on threejs-svg-loader
 
 ### () - THU 09/11/2022
-* () edit: threejs-normal-material
+* (done) edit: threejs-normal-material
 * () videoground-blog-posts: threejs-normal-material
 
 * () test-threejs: post folder for threejs-svg-loader
