--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -59,7 +59,7 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - THU 09/11/2022
 * (done) edit: threejs-normal-material
-* () videoground-blog-posts: threejs-normal-material
+* (done) videoground-blog-posts: threejs-normal-material
 
 * () test-threejs: post folder for threejs-svg-loader
 * () test-threejs: demo for threejs dae exporter
