--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -17,6 +17,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () start threejs-examples-weird-face-two r140 prototype
 
 ## EDIT
+* () threejs-geometry
 * () threejs-normal-map
 * () threejs-object3d-get-world-position
 * () threejs-vector3-apply-axis-angle
@@ -56,13 +57,12 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - FRI 09/11/2022
 * () start post #1005 on threejs-svg-loader
+* () test-threejs: post folder for threejs-svg-loader
+* () test-threejs: demo for threejs dae exporter
 
 ### () - THU 09/11/2022
 * (done) edit: threejs-normal-material
 * (done) videoground-blog-posts: threejs-normal-material
-
-* () test-threejs: post folder for threejs-svg-loader
-* () test-threejs: demo for threejs dae exporter
 
 ### () - WED 09/11/2022
 * (done) threejs-mesh-material-index
