--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -54,11 +54,14 @@ I can only do so much per day, when I find something that needs doing I can park
 
 
 ### () - SAT 09/11/2022
+* (done) test-threejs: threejs-cube-texture 
+* () edit threejs-cube-texture
 
-### () - FRI 09/11/2022
-* () start post #1005 on threejs-svg-loader
 * () test-threejs: post folder for threejs-svg-loader
 * () test-threejs: demo for threejs dae exporter
+
+### () - FRI 09/11/2022
+* (done) start post #1005 on threejs-svg-loader
 
 ### () - THU 09/11/2022
 * (done) edit: threejs-normal-material
