--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -50,15 +50,30 @@ I can only do so much per day, when I find something that needs doing I can park
 * () pdbf : have a write feature that can be used to update the text of just one post
 * () pdbf : add a feature like that of the fresh-by-cat app, but it will just read the one file and spit to stdout
 
-## () - SUN 09/11/2022 to  SAT 09/17/2022
 
 
-### () - SAT 09/11/2022
-* (done) test-threejs: threejs-cube-texture 
-* () edit threejs-cube-texture
+
+
+
+## () - SUN 09/18/2022 to  SAT 09/24/2022
+
+### () - SUN 09/18/2022
+* () edit threejs-cube-texture - links and proof read
 
 * () test-threejs: post folder for threejs-svg-loader
 * () test-threejs: demo for threejs dae exporter
+
+
+
+
+
+
+
+## () - SUN 09/11/2022 to  SAT 09/17/2022
+
+### () - SAT 09/11/2022
+* (done) test-threejs: threejs-cube-texture 
+* (done) edit threejs-cube-texture
 
 ### () - FRI 09/11/2022
 * (done) start post #1005 on threejs-svg-loader
