--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -58,18 +58,14 @@ I can only do so much per day, when I find something that needs doing I can park
 ## () - SUN 09/18/2022 to  SAT 09/24/2022
 
 ### () - SUN 09/18/2022
-* () edit threejs-cube-texture - links and proof read
-
-* () test-threejs: post folder for threejs-svg-loader
-* () test-threejs: demo for threejs dae exporter
-
-
-
+* (done) edit threejs-cube-texture - links and proof read
 
 
 
 
 ## () - SUN 09/11/2022 to  SAT 09/17/2022
+
+New post on the SVG Loader this week
 
 ### () - SAT 09/11/2022
 * (done) test-threejs: threejs-cube-texture 
