--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -57,9 +57,32 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ## () - SUN 09/18/2022 to  SAT 09/24/2022
 
+### () - SAT 09/24/2022
+
+### () - FRI 09/23/2022
+* () start post #1006 on threejs-examples-svg-movement
+
+### () - THU 09/22/2022
+* () test-threejs: for post folder threejs-examples-svg-movement
+* () edit: threejs-
+
+### () - WED 09/21/2022
+* () test-threejs: for post folder threejs-examples-svg-movement
+* () edit: threejs-
+
+### () - TUE 09/20/2022
+* () test-threejs: for post folder threejs-examples-svg-movement
+* () edit: threejs-
+
+### () - MON 09/19/2022
+* () test-threejs: svg-movement proto
+* () edit: threejs-
+* () videoground-blog-posts: 
+
+
 ### () - SUN 09/18/2022
 * (done) edit threejs-cube-texture - links and proof read
-
+* (done) edit threejs-scene
 
 
 
