--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -26,7 +26,6 @@ I can only do so much per day, when I find something that needs doing I can park
 * () threejs-line-fat-width
 * () threejs-shape
 * () threejs-edges-geometry
-* () threejs-torus
 
 * () threejs-object3d-visible
 * () threejs-raycaster
@@ -76,9 +75,8 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - MON 09/19/2022
 * () test-threejs: svg-movement proto
-* () edit: threejs-
-* () videoground-blog-posts: 
-
+* () edit: threejs-torus
+* () videoground-blog-posts: threejs-torus
 
 ### () - SUN 09/18/2022
 * (done) edit threejs-cube-texture - links and proof read
