--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -74,9 +74,9 @@ I can only do so much per day, when I find something that needs doing I can park
 * () edit: threejs-
 
 ### () - MON 09/19/2022
+* (done) edit: threejs-torus
+* (done) videoground-blog-posts: threejs-torus
 * () test-threejs: svg-movement proto
-* () edit: threejs-torus
-* () videoground-blog-posts: threejs-torus
 
 ### () - SUN 09/18/2022
 * (done) edit threejs-cube-texture - links and proof read
