--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -29,7 +29,7 @@ I can only do so much per day, when I find something that needs doing I can park
 
 * () threejs-object3d-visible
 * () threejs-raycaster
-* () threejs-points-material
+
 * () threejs-webgl: proof read, for post folder of current state, anything else from there
 * () threejs-examples-dae-tools: r4 of dae-tools and edit post
 
@@ -66,17 +66,23 @@ I can only do so much per day, when I find something that needs doing I can park
 * () edit: threejs-
 
 ### () - WED 09/21/2022
+* () test-threejs: cube-texture
+* () videoground-blog-posts: threejs-cube-texture
+
 * () test-threejs: for post folder threejs-examples-svg-movement
 * () edit: threejs-
 
 ### () - TUE 09/20/2022
+* () edit: threejs-points-material
+* () videoground-blog-posts: threejs-points-material
+
+* () test-threejs: svg-movement proto
 * () test-threejs: for post folder threejs-examples-svg-movement
-* () edit: threejs-
 
 ### () - MON 09/19/2022
 * (done) edit: threejs-torus
 * (done) videoground-blog-posts: threejs-torus
-* () test-threejs: svg-movement proto
+* (done) test-threejs: threejs-cube-texture
 
 ### () - SUN 09/18/2022
 * (done) edit threejs-cube-texture - links and proof read
