--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -73,7 +73,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () edit: threejs-
 
 ### () - TUE 09/20/2022
-* () edit: threejs-points-material
+* (done) edit: threejs-points-material
 * () videoground-blog-posts: threejs-points-material
 
 * () test-threejs: svg-movement proto
