--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -6,15 +6,14 @@ THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS, LINUX
 
 I can only do so much per day, when I find something that needs doing I can park it here first. I can then plane out a week by taking items from here.
 
-* () start a new DAE file for a shelf-unit for front room
-* () work on new DAE folder shelter-one
-
 ## PROTOTYPES
 * () start a threejs-animation-loop proto folder with loop example in threejs-object3d-rotation s5-apply-euler example
 * () start a threejs-geometry-utils proto folder
 * () start a threejs-export-frames proto folder
 * () start threejs-examples-weird-blob-guy-one r140 prototype
 * () start threejs-examples-weird-face-two r140 prototype
+* () start a new DAE file for a shelf-unit for front room
+* () work on new DAE folder shelter-one
 
 ## EDIT
 * () threejs-geometry
@@ -25,7 +24,6 @@ I can only do so much per day, when I find something that needs doing I can park
 * () threejs-orbit-controls
 * () threejs-line-fat-width
 * () threejs-shape
-* () threejs-edges-geometry
 
 * () threejs-object3d-visible
 * () threejs-raycaster
@@ -44,7 +42,7 @@ I can only do so much per day, when I find something that needs doing I can park
 
 
 ## BLOG POST SCRIPTS
-* () start a pdbf ( post database file ) cli tool for createing one large file from a posts folder, and inverse of such.
+* () start a pdbf ( post database file ) cli tool for creating one large file from a posts folder, and inverse of such.
 * () pdbf : have a read feature that can be used to read the text of just one post
 * () pdbf : have a write feature that can be used to update the text of just one post
 * () pdbf : add a feature like that of the fresh-by-cat app, but it will just read the one file and spit to stdout
@@ -66,18 +64,20 @@ I can only do so much per day, when I find something that needs doing I can park
 * () edit: threejs-
 
 ### () - WED 09/21/2022
+* () edit: threejs-edges-geometry
+
 * () test-threejs: cube-texture
 * () videoground-blog-posts: threejs-cube-texture
+* () videoground-blog-posts: threejs-points-material
+* () videoground-blog-posts: threejs-edges-geometry
 
 * () test-threejs: for post folder threejs-examples-svg-movement
-* () edit: threejs-
+* () test-threejs: svg-movement proto
+* () test-threejs: for post folder threejs-examples-svg-movement
+
 
 ### () - TUE 09/20/2022
 * (done) edit: threejs-points-material
-* () videoground-blog-posts: threejs-points-material
-
-* () test-threejs: svg-movement proto
-* () test-threejs: for post folder threejs-examples-svg-movement
 
 ### () - MON 09/19/2022
 * (done) edit: threejs-torus
