--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -35,7 +35,7 @@ I can only do so much per day, when I find something that needs doing I can park
 * () threejs-examples-object-grid-wrap-land : r4 of example
 
 ## YOUTUBE
-* () update youtube github video links from threejs-buffer-geometry-attributes-uv forward
+* () update youtube github video links from threejs-examples-house forward
 
 ## VIDEOGROUND
 * () r6 of videoground - use user data folder to get start video URI and start folder for opening files
@@ -62,19 +62,17 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - THU 09/22/2022
 * () test-threejs: for post folder threejs-examples-svg-movement
 * () edit: threejs-
-
-### () - WED 09/21/2022
-* () edit: threejs-edges-geometry
-
 * () test-threejs: cube-texture
 * () videoground-blog-posts: threejs-cube-texture
 * () videoground-blog-posts: threejs-points-material
 * () videoground-blog-posts: threejs-edges-geometry
-
 * () test-threejs: for post folder threejs-examples-svg-movement
 * () test-threejs: svg-movement proto
 * () test-threejs: for post folder threejs-examples-svg-movement
 
+### () - WED 09/21/2022
+* (done) edit: threejs-edges-geometry
+* (done) update youtube github video links from threejs-buffer-geometry-attributes-uv forward
 
 ### () - TUE 09/20/2022
 * (done) edit: threejs-points-material
