--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -20,7 +20,6 @@ I can only do so much per day, when I find something that needs doing I can park
 * () threejs-normal-map
 * () threejs-object3d-get-world-position
 * () threejs-vector3-apply-axis-angle
-* () threejs-vector3-apply-euler
 * () threejs-orbit-controls
 * () threejs-line-fat-width
 * () threejs-shape
@@ -59,16 +58,17 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - FRI 09/23/2022
 * () start post #1006 on threejs-examples-svg-movement
 
-### () - THU 09/22/2022
-* () test-threejs: for post folder threejs-examples-svg-movement
-* () edit: threejs-
 * () test-threejs: cube-texture
 * () videoground-blog-posts: threejs-cube-texture
-* () videoground-blog-posts: threejs-points-material
 * () videoground-blog-posts: threejs-edges-geometry
+
+### () - THU 09/22/2022
 * () test-threejs: for post folder threejs-examples-svg-movement
-* () test-threejs: svg-movement proto
-* () test-threejs: for post folder threejs-examples-svg-movement
+* () edit: threejs-vector3-apply-euler
+
+* () videoground-blog-posts: threejs-vector3-apply-euler
+* () videoground-blog-posts: threejs-points-material
+
 
 ### () - WED 09/21/2022
 * (done) edit: threejs-edges-geometry
