--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -63,11 +63,13 @@ I can only do so much per day, when I find something that needs doing I can park
 * () videoground-blog-posts: threejs-edges-geometry
 
 ### () - THU 09/22/2022
-* () test-threejs: for post folder threejs-examples-svg-movement
-* () edit: threejs-vector3-apply-euler
+* (done) test-threejs: for post folder threejs-examples-svg-movement
 
-* () videoground-blog-posts: threejs-vector3-apply-euler
 * () videoground-blog-posts: threejs-points-material
+
+* () edit: threejs-vector3-apply-euler
+* () videoground-blog-posts: threejs-vector3-apply-euler
+
 
 
 ### () - WED 09/21/2022
