--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -64,13 +64,10 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - THU 09/22/2022
 * (done) test-threejs: for post folder threejs-examples-svg-movement
+* (done) videoground-blog-posts: threejs-points-material
+* (done) edit: threejs-vector3-apply-euler
 
-* () videoground-blog-posts: threejs-points-material
-
-* () edit: threejs-vector3-apply-euler
 * () videoground-blog-posts: threejs-vector3-apply-euler
-
-
 
 ### () - WED 09/21/2022
 * (done) edit: threejs-edges-geometry
