--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -56,11 +56,12 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - SAT 09/24/2022
 
 ### () - FRI 09/23/2022
-* () start post #1006 on threejs-examples-svg-movement
-
+* (done) start post #1006 on threejs-examples-svg-movement
 * () test-threejs: cube-texture
 * () videoground-blog-posts: threejs-cube-texture
 * () videoground-blog-posts: threejs-edges-geometry
+* () videoground-blog-posts: new template using r0 of svgmove.js
+* () videoground-blog-posts: threejs-examples-svg-movement
 
 ### () - THU 09/22/2022
 * (done) test-threejs: for post folder threejs-examples-svg-movement
