--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -54,14 +54,13 @@ I can only do so much per day, when I find something that needs doing I can park
 ## () - SUN 09/18/2022 to  SAT 09/24/2022
 
 ### () - SAT 09/24/2022
-
-### () - FRI 09/23/2022
-* (done) start post #1006 on threejs-examples-svg-movement
-* () test-threejs: cube-texture
-* () videoground-blog-posts: threejs-cube-texture
 * () videoground-blog-posts: threejs-edges-geometry
 * () videoground-blog-posts: new template using r0 of svgmove.js
 * () videoground-blog-posts: threejs-examples-svg-movement
+
+### () - FRI 09/23/2022
+* (done) start post #1006 on threejs-examples-svg-movement
+* (done) videoground-blog-posts: threejs-cube-texture
 
 ### () - THU 09/22/2022
 * (done) test-threejs: for post folder threejs-examples-svg-movement
