--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -54,6 +54,9 @@ I can only do so much per day, when I find something that needs doing I can park
 ## () - SUN 09/18/2022 to  SAT 09/24/2022
 
 ### () - SAT 09/24/2022
+* (done) edit discovery-getting-started
+* () test-threejs : start header app collection?
+
 * () videoground-blog-posts: threejs-edges-geometry
 * () videoground-blog-posts: new template using r0 of svgmove.js
 * () videoground-blog-posts: threejs-examples-svg-movement
