--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -16,22 +16,25 @@ I can only do so much per day, when I find something that needs doing I can park
 * () work on new DAE folder shelter-one
 
 ## EDIT
-* () threejs-geometry
-* () threejs-normal-map
-* () threejs-object3d-get-world-position
-* () threejs-vector3-apply-axis-angle
-* () threejs-orbit-controls
-* () threejs-line-fat-width
-* () threejs-shape
-
-* () threejs-object3d-visible
-* () threejs-raycaster
-
-* () threejs-webgl: proof read, for post folder of current state, anything else from there
 * () threejs-examples-dae-tools: r4 of dae-tools and edit post
-
-* () threejs-export-webm-whammy: for post folder
 * () threejs-examples-object-grid-wrap-land : r4 of example
+* () threejs-export-webm-whammy: for post folder
+* () threejs-face3
+* () threejs-geometry
+* () threejs-line-fat-width
+* () threejs-normal-map
+* () threejs-object3d-get-by-name
+* () threejs-object3d-get-world-position
+* () threejs-object3d-layers
+* () threejs-object3d-parent
+* () threejs-object3d-type
+* () threejs-object3d-visible
+* () threejs-orbit-controls
+* () threejs-raycaster
+* () threejs-shape
+* () threejs-vector3-apply-axis-angle
+* () threejs-webgl: proof read, for post folder of current state, anything else from there
+* () threejs-webglrenderer
 
 ## YOUTUBE
 * () update youtube github video links from threejs-examples-house forward
