--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -58,10 +58,10 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - SAT 09/24/2022
 * (done) edit discovery-getting-started
-* () test-threejs : start header app collection?
+* (done) videoground-blog-posts: new template using r0 of svgmove.js
 
+* () test-threejs : start header app collection?
 * () videoground-blog-posts: threejs-edges-geometry
-* () videoground-blog-posts: new template using r0 of svgmove.js
 * () videoground-blog-posts: threejs-examples-svg-movement
 
 ### () - FRI 09/23/2022
