--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -50,6 +50,32 @@ I can only do so much per day, when I find something that needs doing I can park
 * () pdbf : add a feature like that of the fresh-by-cat app, but it will just read the one file and spit to stdout
 
 
+## () - SUN 09/25/2022 to  FRI 09/30/2022
+
+This week I will like to get a current list of best preforming posts for threejs, say a top ten or so, and start focusing just on those posts in terms of editing text, creating more examples, and also addtional videos. I might have a single exception or two this week but for the most part that is what I would like to start doing.
+
+So then
+    * Focus on top ten posts in threejs
+    * new post for friday
+
+### () - FRI 09/10/2022
+* (done) start post #1007 on threejs-
+
+### () - THU 09/29/2022
+
+### () - WED 09/28/2022
+
+### () - TUE 09/27/2022
+
+### () - MON 09/26/2022
+* () edit threejs-vector3-apply-euler
+* () videoground-blog-posts: threejs-vector3-apply-euler
+* () start a prototype for fridays new post
+* () get a list togetaher for top ten posts and start editing fist post
+
+### () - SUN 09/25/2022
+* (done) edit threejs-vector3-apply-euler
+
 
 
 
