--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -52,11 +52,26 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ## () - SUN 09/25/2022 to  FRI 09/30/2022
 
-This week I will like to get a current list of best preforming posts for threejs, say a top ten or so, and start focusing just on those posts in terms of editing text, creating more examples, and also addtional videos. I might have a single exception or two this week but for the most part that is what I would like to start doing.
+This week I will like to get a current list of best preforming posts for threejs, say a top ten or so, and start focusing just on those posts in terms of editing text, creating more examples, and also additional videos. I might have a single exception or two this week but for the most part that is what I would like to start doing.
 
 So then
     * Focus on top ten posts in threejs
-    * new post for friday
+    * new post for Friday
+
+This is the current list as of 09/26/2022
+```
+POST                                                        CLICKS  IMPRESSIONS
+/2022/04/04/threejs-object3d-position/                      285     4,887
+/2021/06/07/threejs-buffer-geometry-attributes-position/    176     2,649
+/2018/04/17/threejs-canvas-texture/                         149     1,693
+/2021/05/13/threejs-object3d-lookat/                        145     2,705
+/2021/06/03/threejs-object3d-traverse/                      133     1,600
+/2021/06/09/threejs-buffer-geometry-attributes-uv/          128     922
+/2018/05/16/threejs-grouping-mesh-objects/                  110     2,269
+/2021/04/21/threejs-materials-transparent/                  104     3,815
+/2018/04/16/threejs-fog/                                    104     1,389
+/2021/05/11/threejs-object3d-scale/                         100     2,781
+```
 
 ### () - FRI 09/10/2022
 * (done) start post #1007 on threejs-
@@ -66,12 +81,14 @@ So then
 ### () - WED 09/28/2022
 
 ### () - TUE 09/27/2022
+* () edit threejs-object3d-position
 
 ### () - MON 09/26/2022
-* () edit threejs-vector3-apply-euler
+* (done) edit threejs-vector3-apply-euler
+* (done) get a list together for top ten posts and start editing fist post
+
 * () videoground-blog-posts: threejs-vector3-apply-euler
-* () start a prototype for fridays new post
-* () get a list togetaher for top ten posts and start editing fist post
+* () start a prototype for Fridays new post
 
 ### () - SUN 09/25/2022
 * (done) edit threejs-vector3-apply-euler
