--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -82,12 +82,15 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - TUE 09/27/2022
 * () edit threejs-object3d-position
+* () videoground-blog-posts: threejs-examples-svg-movement
+
+* () prototype for Fridays new post
 
 ### () - MON 09/26/2022
 * (done) edit threejs-vector3-apply-euler
 * (done) get a list together for top ten posts and start editing fist post
+* (done) videoground-blog-posts: threejs-vector3-apply-euler
 
-* () videoground-blog-posts: threejs-vector3-apply-euler
 * () start a prototype for Fridays new post
 
 ### () - SUN 09/25/2022
