--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -74,24 +74,27 @@ POST                                                        CLICKS  IMPRESSIONS
 ```
 
 ### () - FRI 09/10/2022
-* (done) start post #1007 on threejs-
+* () threejs-examples-animation-loop for post folder
+* () start post #1007 on threejs-examples-animation-loop
 
 ### () - THU 09/29/2022
+* () threejs-examples-animation-loop for post folder
 
 ### () - WED 09/28/2022
+* () animation-loop prototype for Fridays new post
 
 ### () - TUE 09/27/2022
-* () edit threejs-object3d-position
-* () videoground-blog-posts: threejs-examples-svg-movement
+* (done) edit threejs-object3d-position
+* () videoground-blog-posts: threejs-edges-geometry
 
-* () prototype for Fridays new post
+* () start animation-loop prototype for Fridays new post
+
+* () videoground-blog-posts: threejs-examples-svg-movement
 
 ### () - MON 09/26/2022
 * (done) edit threejs-vector3-apply-euler
 * (done) get a list together for top ten posts and start editing fist post
 * (done) videoground-blog-posts: threejs-vector3-apply-euler
-
-* () start a prototype for Fridays new post
 
 ### () - SUN 09/25/2022
 * (done) edit threejs-vector3-apply-euler
