--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -73,6 +73,8 @@ POST                                                        CLICKS  IMPRESSIONS
 /2021/05/11/threejs-object3d-scale/                         100     2,781
 ```
 
+So this week I think I will start with threejs-object3d-position as a subject to keep working on a little each day. I will also want to make a video2 for this as well that I will not want to rush.
+
 ### () - FRI 09/10/2022
 * () threejs-examples-animation-loop for post folder
 * () start post #1007 on threejs-examples-animation-loop
@@ -82,14 +84,16 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - WED 09/28/2022
 * () animation-loop prototype for Fridays new post
+* () videoground-blog-posts: threejs-examples-svg-movement
+
 
 ### () - TUE 09/27/2022
 * (done) edit threejs-object3d-position
+
 * () videoground-blog-posts: threejs-edges-geometry
-
 * () start animation-loop prototype for Fridays new post
+* () start video2 for threejs-object3d-position
 
-* () videoground-blog-posts: threejs-examples-svg-movement
 
 ### () - MON 09/26/2022
 * (done) edit threejs-vector3-apply-euler
