--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -89,8 +89,8 @@ So this week I think I will start with threejs-object3d-position as a subject to
 
 ### () - TUE 09/27/2022
 * (done) edit threejs-object3d-position
+* (done) videoground-blog-posts: threejs-edges-geometry
 
-* () videoground-blog-posts: threejs-edges-geometry
 * () start animation-loop prototype for Fridays new post
 * () start video2 for threejs-object3d-position
 
