--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -84,16 +84,14 @@ So this week I think I will start with threejs-object3d-position as a subject to
 
 ### () - WED 09/28/2022
 * () animation-loop prototype for Fridays new post
+* () edit threejs-object3d-position
+* () start video2 for threejs-object3d-position
 * () videoground-blog-posts: threejs-examples-svg-movement
-
 
 ### () - TUE 09/27/2022
 * (done) edit threejs-object3d-position
 * (done) videoground-blog-posts: threejs-edges-geometry
-
-* () start animation-loop prototype for Fridays new post
-* () start video2 for threejs-object3d-position
-
+* (done) start animation-loop prototype for Fridays new post
 
 ### () - MON 09/26/2022
 * (done) edit threejs-vector3-apply-euler
