--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -73,18 +73,21 @@ POST                                                        CLICKS  IMPRESSIONS
 /2021/05/11/threejs-object3d-scale/                         100     2,781
 ```
 
-So this week I think I will start with threejs-object3d-position as a subject to keep working on a little each day. I will also want to make a video2 for this as well that I will not want to rush.
+So this week I think I will start with threejs-object3d-position as a subject to keep working on a little each day. I will also want to make a video2 for this as well that I will not want to rush. I should also start to edit some of these other posts while I am at it, bit I am thinking that it would be a good idea to focus on one of 10 each week.
 
 ### () - FRI 09/10/2022
 * () threejs-examples-animation-loop for post folder
 * () start post #1007 on threejs-examples-animation-loop
 
 ### () - THU 09/29/2022
-* () threejs-examples-animation-loop for post folder
+* () threejs-examples-animation-loop-module for post folder
 
 ### () - WED 09/28/2022
-* () animation-loop prototype for Fridays new post
+* () threejs-buffer-geometry-attributes-position
 * () edit threejs-object3d-position
+
+* () work on animation loop module prototype for Fridays new post
+
 * () start video2 for threejs-object3d-position
 * () videoground-blog-posts: threejs-examples-svg-movement
 
