--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -83,7 +83,7 @@ So this week I think I will start with threejs-object3d-position as a subject to
 * () threejs-examples-animation-loop-module for post folder
 
 ### () - WED 09/28/2022
-* () threejs-buffer-geometry-attributes-position
+* (done) threejs-buffer-geometry-attributes-position
 * () edit threejs-object3d-position
 
 * () work on animation loop module prototype for Fridays new post
