--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -84,10 +84,11 @@ So this week I think I will start with threejs-object3d-position as a subject to
 
 ### () - WED 09/28/2022
 * (done) threejs-buffer-geometry-attributes-position
-* () edit threejs-object3d-position
+* (done) edit threejs-object3d-position
+
+* () videoground-blog-posts: 
 
 * () work on animation loop module prototype for Fridays new post
-
 * () start video2 for threejs-object3d-position
 * () videoground-blog-posts: threejs-examples-svg-movement
 
