--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -81,16 +81,18 @@ So this week I think I will start with threejs-object3d-position as a subject to
 
 ### () - THU 09/29/2022
 * () threejs-examples-animation-loop-module for post folder
+* () edit threejs-object3d-position
+* () edit threejs-canvas-texture
+* () edit threejs-vector3-lerp
+* () videoground-blog-posts: 
+* () start video2 for threejs-object3d-position
+* () videoground-blog-posts: threejs-examples-svg-movement
 
 ### () - WED 09/28/2022
 * (done) threejs-buffer-geometry-attributes-position
 * (done) edit threejs-object3d-position
-
-* () videoground-blog-posts: 
-
+* (done) videoground-blog-posts: threejs-vector3-lerp
 * () work on animation loop module prototype for Fridays new post
-* () start video2 for threejs-object3d-position
-* () videoground-blog-posts: threejs-examples-svg-movement
 
 ### () - TUE 09/27/2022
 * (done) edit threejs-object3d-position
