--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -79,6 +79,8 @@ So this week I think I will start with threejs-object3d-position as a subject to
 * () threejs-examples-animation-loop for post folder
 * () start post #1007 on threejs-examples-animation-loop
 
+* () test-threejs : start header app collection?
+
 ### () - THU 09/29/2022
 * () threejs-examples-animation-loop-module for post folder
 * () edit threejs-object3d-position
@@ -92,7 +94,7 @@ So this week I think I will start with threejs-object3d-position as a subject to
 * (done) threejs-buffer-geometry-attributes-position
 * (done) edit threejs-object3d-position
 * (done) videoground-blog-posts: threejs-vector3-lerp
-* () work on animation loop module prototype for Fridays new post
+* (done) work on animation loop module prototype for Fridays new post
 
 ### () - TUE 09/27/2022
 * (done) edit threejs-object3d-position
@@ -116,10 +118,6 @@ So this week I think I will start with threejs-object3d-position as a subject to
 ### () - SAT 09/24/2022
 * (done) edit discovery-getting-started
 * (done) videoground-blog-posts: new template using r0 of svgmove.js
-
-* () test-threejs : start header app collection?
-* () videoground-blog-posts: threejs-edges-geometry
-* () videoground-blog-posts: threejs-examples-svg-movement
 
 ### () - FRI 09/23/2022
 * (done) start post #1006 on threejs-examples-svg-movement
