--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -82,13 +82,13 @@ So this week I think I will start with threejs-object3d-position as a subject to
 * () test-threejs : start header app collection?
 
 ### () - THU 09/29/2022
-* () threejs-examples-animation-loop-module for post folder
-* () videoground-blog-posts: 
+* (done) threejs-examples-animation-loop-module for post folder
+
 * () edit threejs-object3d-position
 * () edit threejs-canvas-texture
 * () edit threejs-vector3-lerp
 
-
+* () videoground-blog-posts: 
 * () start video2 for threejs-object3d-position
 * () videoground-blog-posts: threejs-examples-svg-movement
 
