--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -83,10 +83,10 @@ So this week I think I will start with threejs-object3d-position as a subject to
 
 ### () - THU 09/29/2022
 * (done) threejs-examples-animation-loop-module for post folder
+* (done) edit threejs-object3d-position
 
-* () edit threejs-object3d-position
-* () edit threejs-canvas-texture
 * () edit threejs-vector3-lerp
+* () edit threejs-canvas-texture
 
 * () videoground-blog-posts: 
 * () start video2 for threejs-object3d-position
