--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -76,21 +76,19 @@ POST                                                        CLICKS  IMPRESSIONS
 So this week I think I will start with threejs-object3d-position as a subject to keep working on a little each day. I will also want to make a video2 for this as well that I will not want to rush. I should also start to edit some of these other posts while I am at it, bit I am thinking that it would be a good idea to focus on one of 10 each week.
 
 ### () - FRI 09/10/2022
-* () threejs-examples-animation-loop for post folder
 * () start post #1007 on threejs-examples-animation-loop
-
+* () threejs-examples-animation-loop for post folder
+* () edit threejs-canvas-texture
+* () edit threejs-vector3-lerp
+* () videoground-blog-posts: 
+* () start video2 for threejs-object3d-position
+* () videoground-blog-posts: threejs-examples-svg-movement
 * () test-threejs : start header app collection?
 
 ### () - THU 09/29/2022
 * (done) threejs-examples-animation-loop-module for post folder
 * (done) edit threejs-object3d-position
-
-* () edit threejs-vector3-lerp
-* () edit threejs-canvas-texture
-
-* () videoground-blog-posts: 
-* () start video2 for threejs-object3d-position
-* () videoground-blog-posts: threejs-examples-svg-movement
+* (done) edit threejs-vector3-lerp
 
 ### () - WED 09/28/2022
 * (done) threejs-buffer-geometry-attributes-position
