--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -19,13 +19,53 @@ POST                                                        CLICKS  IMPRESSIONS
 /2021/05/11/threejs-object3d-scale/                         100     2,781
 ```
 
+## () - WEEK 2 - SUN 10/02/2022 to SAT 10/8/2022
+
+As with every week there is what I will be writing about on friday. I will also like to keep up with editing my top ten posts. The other thing is the animation-loop-framework, that is soemthjg that i would like to add to dustinpfister.github.io if not at then edn of this week soon.
+
+### () - SAT 10/08/2022
+* () threejs-examples-animation-loop-module
+* () hexo-sitesource: at least have a new static background
+* () build and publish
+
+### () - FRI 10/07/2022
+* () threejs-examples-animation-loop-module
+* () start post #1008 on threejs-
+
+### () - THU 10/06/2022
+* () for post folder for:
+* () threejs-examples-animation-loop-module
+* () edit threejs-buffer-geometry-attributes-position
+
+### () - WED 10/05/2022
+* () proto for:
+* () threejs-examples-animation-loop-module
+* () edit threejs-buffer-geometry-attributes-position
+
+### () - TUE 10/04/2022
+* () proto for:
+* () threejs-examples-animation-loop-module
+* () edit threejs-buffer-geometry-attributes-position
+
+### () - MON 10/03/2022
+* () proto for:
+* () threejs-examples-animation-loop-module
+* () edit threejs-buffer-geometry-attributes-position
+
+### () - SUN 10/02/2022
+* () proto for:
+* () threejs-examples-animation-loop-module
+* () edit threejs-buffer-geometry-attributes-position
+
 
 ## () - WEEK 1 - SAT 10/01/2022 to SAT 10/30/2022
 
-This first week of the month is just one day, and it is on a saterday so I will not be getting much done for this one. I think that main thing I would like to focus on each day at this time out be my new animaiton loop framework though.
+This first week of the month is just one day, and it is on a saterday so I will not be getting much done for this one. There is getting a little donw with the new header app project that I want to move forward with, and also doing just a little editing with on eof my top ten posts.
 
 ### () - SAT 10/01/2022
-* () forpost folder for threejs-examples-animaiton-loop module
+* (done) using an html file and loading that into an iframe for the header app in test threejs
+* (done) work on cleaning up forpost folder for threejs-examples-animaiton-loop module
 
 * () edit threejs-buffer-geometry-attributes-position
 * () videoground-blog-posts: 
+
