--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -51,6 +51,8 @@ As with every week there is what I will be writing about on friday. I will also 
 * () proto for:
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
+* () videoground-blog-posts: 
+
 
 ### () - SUN 10/02/2022
 * () proto for:
@@ -65,7 +67,5 @@ This first week of the month is just one day, and it is on a saterday so I will 
 ### () - SAT 10/01/2022
 * (done) using an html file and loading that into an iframe for the header app in test threejs
 * (done) work on cleaning up forpost folder for threejs-examples-animaiton-loop module
-
-* () edit threejs-buffer-geometry-attributes-position
-* () videoground-blog-posts: 
+* (done) edit threejs-buffer-geometry-attributes-position
 
