--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -21,7 +21,7 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ## () - WEEK 2 - SUN 10/02/2022 to SAT 10/8/2022
 
-As with every week there is what I will be writing about on friday. I will also like to keep up with editing my top ten posts. The other thing is the animation-loop-framework, that is soemthjg that i would like to add to dustinpfister.github.io if not at then edn of this week soon.
+As with every week there is what I will be writing about on Friday. I will also like to keep up with editing my top ten posts. The other thing is the animation-loop-framework, that is something that i would like to add to dustinpfister.github.io if not at then end of this week soon.
 
 ### () - SAT 10/08/2022
 * () threejs-examples-animation-loop-module
@@ -62,10 +62,10 @@ As with every week there is what I will be writing about on friday. I will also 
 
 ## () - WEEK 1 - SAT 10/01/2022 to SAT 10/30/2022
 
-This first week of the month is just one day, and it is on a saterday so I will not be getting much done for this one. There is getting a little donw with the new header app project that I want to move forward with, and also doing just a little editing with on eof my top ten posts.
+This first week of the month is just one day, and it is on a Saturday so I will not be getting much done for this one. There is getting a little done with the new header app project that I want to move forward with, and also doing just a little editing with one of my top ten posts.
 
 ### () - SAT 10/01/2022
 * (done) using an html file and loading that into an iframe for the header app in test threejs
-* (done) work on cleaning up forpost folder for threejs-examples-animaiton-loop module
+* (done) work on cleaning up forpost folder for threejs-examples-animation-loop module
 * (done) edit threejs-buffer-geometry-attributes-position
 
