--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -55,9 +55,9 @@ As with every week there is what I will be writing about on Friday. I will also 
 
 
 ### () - SUN 10/02/2022
+* (done) edit threejs-buffer-geometry-attributes-position
 * () proto for:
 * () threejs-examples-animation-loop-module
-* () edit threejs-buffer-geometry-attributes-position
 
 
 ## () - WEEK 1 - SAT 10/01/2022 to SAT 10/30/2022
