--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -29,26 +29,26 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () build and publish
 
 ### () - FRI 10/07/2022
+* () start post #1008 on threejs-buffergeometry-compute-bounding-box
 * () threejs-examples-animation-loop-module
-* () start post #1008 on threejs-
 
 ### () - THU 10/06/2022
-* () for post folder for:
+* () forpost folder for threejs-buffergeometry-compute-bounding-box
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - WED 10/05/2022
-* () proto for:
+* () forpost folder for threejs-buffergeometry-compute-bounding-box
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - TUE 10/04/2022
-* () proto for:
+* () forpost folder for threejs-buffergeometry-compute-bounding-box
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - MON 10/03/2022
-* () proto for:
+* () start forpost folder for threejs-buffergeometry-compute-bounding-box
 * () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 * () videoground-blog-posts: 
@@ -56,7 +56,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 
 ### () - SUN 10/02/2022
 * (done) edit threejs-buffer-geometry-attributes-position
-* () proto for:
+* (done) proto for boundingbox of buffer geometry
 * () threejs-examples-animation-loop-module
 
 
