--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -44,7 +44,7 @@ As with every week there is what I will be writing about on Friday. I will also 
 
 ### () - TUE 10/04/2022
 * () forpost folder for threejs-buffergeometry-compute-bounding-box
-* () threejs-examples-animation-loop-module
+* () threejs-examples-animation-loop-module: example using lines-determanisic threejs example
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - MON 10/03/2022
