--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -48,15 +48,18 @@ As with every week there is what I will be writing about on Friday. I will also 
 * () edit threejs-buffer-geometry-attributes-position
 
 ### () - MON 10/03/2022
-* () start forpost folder for threejs-buffergeometry-compute-bounding-box
-* () threejs-examples-animation-loop-module
 * () edit threejs-buffer-geometry-attributes-position
 * () videoground-blog-posts: 
 
+* () start forpost folder for threejs-buffergeometry-compute-bounding-box
+* () threejs-examples-animation-loop-module: start new demo, and work on r1
 
 ### () - SUN 10/02/2022
 * (done) edit threejs-buffer-geometry-attributes-position
 * (done) proto for boundingbox of buffer geometry
+
+
+
 
 ## () - WEEK 1 - SAT 10/01/2022 to SAT 10/30/2022
 
